Fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,8 @@
 .read-the-docs {
   color: #888;
 }
+
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
